# personal-knowledge-agent-harness

./: AGENTS.md  Dockerfile  README.md  pyproject.toml  run  run-web
deploy/: .gitignore  README.md  docker-compose.yml  nginx.conf  requirements.txt
scripts/: backfill-qa-categories.py  backup-postgres-compose.sh  backup-postgres.sh  check-agent-doc-format.py  check-agents-md-format.py  check-codebase-map-format.py  clean-merged-branches.sh  deploy-production.sh  init-postgres-schema.py  migrate-sqlite-qa-to-postgres.py  rebuild-postgres-qa-embeddings.py
tests/: fakes.py  test_agent_factory.py  test_agent_loop.py  test_auth_service.py  test_backfill_qa_categories.py  test_check_agent_doc_format.py  test_check_agents_md_format.py  test_cli.py  test_cli_renderer.py  test_config.py  test_context_compactor.py  test_init_postgres_schema.py  test_jsonl_logger.py  test_llm_client.py  test_mailer.py  test_memory_extractor.py  test_memory_index.py  test_memory_store.py  test_migrate_sqlite_qa_to_postgres.py  test_permissions.py  test_postgres_auth_repository.py  test_postgres_memory_repository.py  test_postgres_qa_repository.py  test_postgres_qa_semantic_index.py  test_postgres_schema.py  test_postgres_session_repository.py  test_postgres_todo_repository.py  test_prompt_builder.py  test_qa_semantic_index.py  test_rebuild_postgres_qa_embeddings.py  test_runtime_context_compactor.py  test_security.py  test_session_metadata.py  test_session_restore.py  test_session_store.py  test_session_summarizer.py  test_session_transcript.py  test_source_evidence.py  test_sqlite_store.py  (+5 more)
(+173 files in other folders)
