[project]
name = "personal-knowledge-agent-harness"
version = "0.1.0"
description = "Local Q&A knowledge agent harness"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.0",
]

[project.scripts]
pka = "personal_knowledge_agent.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
