[project]
name = "personal-knowledge-agent-harness"
version = "0.1.0"
description = "Local Q&A knowledge agent harness"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "prompt-toolkit>=3.0.0",
  "qdrant-client>=1.11.0",
  "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
pka = "personal_knowledge_agent.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
